# MitigatingOverThinkingLLMs

./: README.md  pyproject.toml  requirements.txt
aux_data/: test_aime.parquet
examples/: convert_fsdp_ckpt.py  model_merger.py
examples/data_preprocess/: preprocess_past_aime_amc.py
local_scripts/: multi_node_run_3k_from4k.sh  multi_node_run_4k.sh
prompt_templates/: qwen_instruct.py
tests/: async_run.py  ray_async_run.py  test_code_eval.py  test_code_reward.py  test_dataproto.py  test_math_equal.py  test_passatk.py  test_potential_reward.py  test_tokenizer.py  test_trainer_utils.py
tools/: eval_accuracy.py  eval_utils.py  prompts.py
tools/analyze_tools/: analyze_summary.py  llm_summary.py
tools/generation_tools/: budget_forcing_gen.py  run_generation.py
verl/: protocol.py
verl/evaluation/: __init__.py  evalmath_main.py  math_utils.py
verl/evaluation/code_eval/: __init__.py
verl/evaluation/code_eval/apps/: apps_utils.py
verl/evaluation/code_eval/bigcodebench/: code_utils.py  sandbox.py  sandbox_utils.py  sanitize.py
verl/single_controller/ray/: base.py
verl/trainer/: main_generation.py  main_ppo.py
verl/trainer/config/: generation.yaml  ppo_trainer.yaml
verl/trainer/ppo/: core_algos.py  ray_trainer.py  trainer_utils.py
verl/utils/dataset/: rl_dataset.py
verl/utils/reward_score/: code.py  kklogic.py  qwen_math_test.py
verl/workers/: fsdp_workers.py
verl/workers/critic/: __init__.py  dp_critic.py
verl/workers/rollout/vllm_rollout/: vllm_rollout.py
